--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
   <div class="container">
+    <h2>CPSC 1045 - <a href="http://langara.bc.ca">Langara College</a></h2>
     <div class="heading">
       <h1 class="title">2048</h1>
       <div class="scores-container">
@@ -77,17 +78,17 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is the official version of 2048. You can play it on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
+    <strong class="important">Note:</strong> This is a version of 2048 used in CPSC-1045 at Langara College. Play the original on your phone here: <a href="http://git.io/2048">http://git.io/2048.</a>
     </p>
     <hr>
     <p>
-    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Original created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
   </div>
 
-  <script src="js/bind_polyfill.js"></script>
-  <script src="js/classlist_polyfill.js"></script>
-  <script src="js/animframe_polyfill.js"></script>
+  <script src="js/shims/bind_polyfill.js"></script>
+  <script src="js/shims/classlist_polyfill.js"></script>
+  <script src="js/shims/animframe_polyfill.js"></script>
   <script src="js/keyboard_input_manager.js"></script>
   <script src="js/html_actuator.js"></script>
   <script src="js/grid.js"></script>
